Bug 452810 - Reference image tool crashes when asked to Copy an image.
Summary: Reference image tool crashes when asked to Copy an image.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Reference Images (other bugs)
Version First Reported In: 5.0.5
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-20 23:46 UTC by budd.chris71
Modified: 2022-04-27 22:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace (7.01 KB, text/plain)
2022-04-23 08:48 UTC, Alvin Wong
Details
attachment-25446-0.html (1.61 KB, text/html)
2022-04-23 12:52 UTC, budd.chris71
Details

Note You need to log in before you can comment on or make changes to this bug.
Description budd.chris71 2022-04-20 23:46:41 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. open an image
2. select reference image tool and right click on image
3. select copy. Krita crashes.

OBSERVED RESULT
krita shuts down.

EXPECTED RESULT
a copy of the image to use as a reference image.

SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Alvin Wong 2022-04-23 08:48:20 UTC
Created attachment 148315 [details]
backtrace
Comment 2 Alvin Wong 2022-04-23 08:55:34 UTC
Confirmed on both 5.0.5 and nightly f665ca6c0a.

However I believe the cut/copy options are only for copying reference image items, so they really should just be disabled when no reference image items are selected.
Comment 3 budd.chris71 2022-04-23 12:52:43 UTC
Created attachment 148320 [details]
attachment-25446-0.html

I just tried to use the reference image tool again. I went to use the "cut"
option, the program shut down.
   I am still learning Krita, this is frustrating.
  Thank you for replying. I look forward to some resolution.
Chris

On Sat, Apr 23, 2022 at 3:55 AM Alvin Wong <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=452810
>
> Alvin Wong <alvin@alvinhc.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>      Ever confirmed|0                           |1
>              Status|REPORTED                    |CONFIRMED
>
> --- Comment #2 from Alvin Wong <alvin@alvinhc.com> ---
> Confirmed on both 5.0.5 and nightly f665ca6c0a.
>
> However I believe the cut/copy options are only for copying reference image
> items, so they really should just be disabled when no reference image
> items are
> selected.
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 4 amyspark 2022-04-27 22:51:23 UTC
Git commit 3ac9d6884e77acef30d13c21735203686949908e by Amy spark, on behalf of Sharaf Zaman.
Committed on 27/04/2022 at 21:23.
Pushed by lsegovia into branch 'master'.

Crashfix: Reference image tool when image isn't selected

M  +6    -4    plugins/tools/defaulttool/referenceimagestool/ToolReferenceImages.cpp

https://invent.kde.org/graphics/krita/commit/3ac9d6884e77acef30d13c21735203686949908e