Crashfix: Reference image tool when image isn't selected

BUG:452810